--- a/ApiEasier.Frontend/src/app/data/pages/card-api-list/card-api-list.component.html
+++ b/ApiEasier.Frontend/src/app/data/pages/card-api-list/card-api-list.component.html
@@ -8,7 +8,7 @@
     <div class="header-section">
       <app-filter-by-input
         class="filter-input"
-        [label]="'Search API'"
+        [label]="'Поиск API'"
         [controlName]="'search'"
         [items]="apiNames"
         (searchQuery)="onSearchQuery($event)"
