--- a/ApiEasier.Frontend/src/app/data/pages/entity-card-list/entity-card-list.component.html
+++ b/ApiEasier.Frontend/src/app/data/pages/entity-card-list/entity-card-list.component.html
@@ -35,7 +35,7 @@
       <div class="filter-section">
         <app-filter-by-input
           class="filter-input"
-          [label]="'Search Entity'"
+          [label]="'Поиск Entity'"
           [controlName]="'search'"
           [items]="entityNames"
           (searchQuery)="onSearchQuery($event)"
