добавлена иконка приложения, картинка с титаном теперь внутри проекта, ограничение по длине в диалогах у имен и описаний

--- a/ApiEasier.Frontend/src/app/data/components/api-dialog/api-dialog.component.html
+++ b/ApiEasier.Frontend/src/app/data/components/api-dialog/api-dialog.component.html
@@ -2,6 +2,7 @@
   #nameInput
   tuiAutoFocus
   tuiTextfieldSize="m"
+  maxlength="200"
   [(ngModel)]="data.name"
   (input)="onInput($event)"
   (keydown.enter)="submit($event)"
@@ -15,6 +16,7 @@
   #descriptionInput
   tuiAutoFocus
   tuiTextfieldSize="m"
+  maxlength="1000"
   [(ngModel)]="data.description"
   (keydown.enter)="submit($event)"
   (keydown.arrowUp)="moveFocus(nameInputRef)"
