--- a/ApiEasier.Frontend/src/app/data/components/entity-dialog/entity-dialog.component.html
+++ b/ApiEasier.Frontend/src/app/data/components/entity-dialog/entity-dialog.component.html
@@ -3,6 +3,7 @@
       #nameInput
       tuiAutoFocus
       tuiTextfieldSize="m"
+      maxlength="200"
       [(ngModel)]="data.name"
       (input)="onInput($event)"
       (keydown.enter)="handleSubmit()"
