--- a/ApiEasier.Frontend/src/app/data/components/endpoint-dialog/endpoint-dialog.component.html
+++ b/ApiEasier.Frontend/src/app/data/components/endpoint-dialog/endpoint-dialog.component.html
@@ -1,6 +1,7 @@
 <tui-input
   tuiAutoFocus
   tuiTextfieldSize="m"
+  maxlength="200"
   [(ngModel)]="data.route"
   (input)="onInput($event)"
   (keydown.enter)="submit()"
@@ -11,6 +12,7 @@
 <tui-select
   tuiAutoFocus
   tuiTextfieldSize="m"
+  maxlength="200"
   [(ngModel)]="data.type"
   (keydown.enter)="submit()"
 >
