--- a/ApiEasier.Frontend/src/app/data/components/header/header.component.css
+++ b/ApiEasier.Frontend/src/app/data/components/header/header.component.css
@@ -6,32 +6,26 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-.header a{
+.header .logo-container {
     height: 4rem;
-}
-
-.header a {
     outline: none; /* Убирает стандартное выделение */
 }
 
-.header a img{
+.header .logo-container img {
     height: 4rem;
+    cursor: pointer;
 }
 
 .header button {
     background-color: white;
     border: none;
     padding: 0.625rem 1.25rem;
-    /* Относительные отступы */
     margin: 0.625rem 0.5rem;
-    /* Относительные отступы */
     border-radius: 0.3125rem;
-    /* Относительный радиус скругления */
     cursor: pointer;
     font-weight: bold;
     transition: background-color 0.3s;
     font-size: 1rem;
-    /* Относительный размер шрифта */
 }
 
 .header button:hover {
@@ -40,18 +34,18 @@
 
 @media only screen and (max-width: 768px) {
     .header {
-        display: flex;  
+        display: flex;
         justify-content: center;
         align-items: center;
         flex-wrap: wrap;
     }
 
-    .header a{
+    .header .logo-container {
         width: -webkit-fill-available;
         height: auto;
     }
 
-    .header a img{
+    .header .logo-container img {
         width: -webkit-fill-available;
         height: auto;
     }
