рефакторинг обработки ошибок при http запросах, переделаны диалоговые окна: добавлено ограничение по длине и алерт при приближении к maxlength выкидывает сколько символов остается и пр. остальное по мелочи

--- a/ApiEasier.Frontend/src/app/data/components/api-dialog/api-dialog.component.html
+++ b/ApiEasier.Frontend/src/app/data/components/api-dialog/api-dialog.component.html
@@ -18,6 +18,7 @@
   tuiTextfieldSize="m"
   maxlength="1000"
   [(ngModel)]="data.description"
+  (input)="onDescriptionInput($event)"
   (keydown.enter)="submit($event)"
   (keydown.arrowUp)="moveFocus(nameInputRef)"
   (keydown.arrowDown)="moveFocus(nameInputRef)"
