--- a/ApiEasier.Frontend/src/app/data/components/entity-dialog/entity-dialog.component.html
+++ b/ApiEasier.Frontend/src/app/data/components/entity-dialog/entity-dialog.component.html
@@ -4,6 +4,7 @@
       tuiAutoFocus
       tuiTextfieldSize="m"
       maxlength="200"
+      max
       [(ngModel)]="data.name"
       (input)="onInput($event)"
       (keydown.enter)="handleSubmit()"
@@ -27,7 +28,7 @@
     </tui-textarea>
   
     <p>
-      <button size="m" tuiButton type="button" [disabled]="!hasValue" (click)="handleSubmit()">
+      <button size="m" tuiButton type="button" [disabled]="!hasValue"  (click)="handleSubmit()">
         Отправить
       </button>
     </p>
