--- a/ApiEasier.Frontend/src/app/data/pages/entity-card-list/entity-card-list.component.css
+++ b/ApiEasier.Frontend/src/app/data/pages/entity-card-list/entity-card-list.component.css
@@ -1,3 +1,13 @@
+h1 {
+  margin: 0;
+  font-size: 24px;
+  color: #0056a6;
+  width: 85%; /* Ширина элемента */
+  text-overflow: ellipsis; /* Добавляем троеточие */
+  white-space: nowrap; /* Запрещаем перенос текста на новую строку */
+  overflow: hidden; /* Скрываем текст, который не помещается */
+  height: 2rem;
+}
 .filter-section {
   display: grid;
   grid-template-columns: 1fr 2fr; /* Two columns for larger screens */
